[yura] fix z-index text

--- a/common/styles/main.css
+++ b/common/styles/main.css
@@ -239,6 +239,7 @@ footer p{
     font-size: 35px;
     margin-top: 35px;
     position: absolute;
+    z-index: -1;
 }
 .edit-btn{
     align-self: flex-end;
